kubenetes/boardgame.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boardgame

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame
  namespace: boardgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      imagePullSecrets:
      - name: harbor-registry
      containers:
      - name: boardgame
        image: harbor.server.thweb.click/boardgame-devsecops/app:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: boardgame-svc
  namespace: boardgame
spec:
  type: ClusterIP
  selector:
    app: boardgame
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress
  namespace: boardgame
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - boardgame.app.thweb.click
    secretName: boardgame-tls
  rules:
  - host: boardgame.app.thweb.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardgame-svc
            port:
              number: 80
